Simulações concluídas nos notebooks de teste

--- a/China Caso1.ipynb
+++ b/China Caso1.ipynb
@@ -35,7 +35,12 @@
       "=SPLIT(\"0,7183345 0,0612379\"; \" \")\n",
       "=SPLIT(\"0,7592619 0,0314566\"; \" \")\n",
       "=SPLIT(\"0,7701869 0,0671470\"; \" \")\n",
-      "=SPLIT(\"0,7699873 0,0561715\"; \" \")\n"
+      "=SPLIT(\"0,7699873 0,0561715\"; \" \")\n",
+      "=SPLIT(\"0,8487249 0,0460144\"; \" \")\n",
+      "=SPLIT(\"0,8392116 0,1153353\"; \" \")\n",
+      "=SPLIT(\"0,8998520 0,0673749\"; \" \")\n",
+      "=SPLIT(\"0,8402126 0,0444464\"; \" \")\n",
+      "=SPLIT(\"0,8640726 0,0738417\"; \" \")\n"
      ]
     }
    ],
