--- a/China Caso2.ipynb
+++ b/China Caso2.ipynb
@@ -34,7 +34,13 @@
       "=SPLIT(\"0,3716175 0,0679336\"; \" \")\n",
       "=SPLIT(\"0,5019777 0,0481093\"; \" \")\n",
       "=SPLIT(\"0,4973126 0,0457011\"; \" \")\n",
-      "=SPLIT(\"0,5214971 0,0420657\"; \" \")\n"
+      "=SPLIT(\"0,5214971 0,0420657\"; \" \")\n",
+      "=SPLIT(\"0,5394093 0,0548036\"; \" \")\n",
+      "=SPLIT(\"0,6123664 0,0345973\"; \" \")\n",
+      "=SPLIT(\"0,6270882 0,0358047\"; \" \")\n",
+      "=SPLIT(\"0,5922887 0,0368511\"; \" \")\n",
+      "=SPLIT(\"0,5834443 0,0304946\"; \" \")\n",
+      "=SPLIT(\"0,5431698 0,0495502\"; \" \")\n"
      ]
     }
    ],
