--- a/China Caso3.ipynb
+++ b/China Caso3.ipynb
@@ -33,7 +33,14 @@
      "text": [
       "=SPLIT(\"0,3767623 0,0593155\"; \" \")\n",
       "=SPLIT(\"0,3977327 0,0413878\"; \" \")\n",
-      "=SPLIT(\"0,4304784 0,0353370\"; \" \")\n"
+      "=SPLIT(\"0,4304784 0,0353370\"; \" \")\n",
+      "=SPLIT(\"0,4806656 0,0713178\"; \" \")\n",
+      "=SPLIT(\"0,4713747 0,0475719\"; \" \")\n",
+      "=SPLIT(\"0,4769627 0,0340849\"; \" \")\n",
+      "=SPLIT(\"0,4578308 0,0618225\"; \" \")\n",
+      "=SPLIT(\"0,4864172 0,0380791\"; \" \")\n",
+      "=SPLIT(\"0,4928605 0,0415484\"; \" \")\n",
+      "=SPLIT(\"0,4721759 0,0418530\"; \" \")\n"
      ]
     }
    ],
