--- a/China Caso4.ipynb
+++ b/China Caso4.ipynb
@@ -33,7 +33,14 @@
      "text": [
       "=SPLIT(\"0,2705246 0,0403000\"; \" \")\n",
       "=SPLIT(\"0,3622894 0,0290984\"; \" \")\n",
-      "=SPLIT(\"0,3694750 0,0206234\"; \" \")\n"
+      "=SPLIT(\"0,3694750 0,0206234\"; \" \")\n",
+      "=SPLIT(\"0,4242725 0,0437687\"; \" \")\n",
+      "=SPLIT(\"0,4407499 0,0360423\"; \" \")\n",
+      "=SPLIT(\"0,4244185 0,0217894\"; \" \")\n",
+      "=SPLIT(\"0,4397760 0,0170673\"; \" \")\n",
+      "=SPLIT(\"0,4235188 0,0253758\"; \" \")\n",
+      "=SPLIT(\"0,4281121 0,0346783\"; \" \")\n",
+      "=SPLIT(\"0,4454698 0,0325200\"; \" \")\n"
      ]
     }
    ],
