--- a/USA Caso1.ipynb
+++ b/USA Caso1.ipynb
@@ -32,7 +32,15 @@
      "output_type": "stream",
      "text": [
       "=SPLIT(\"0,7536895 0,0950455\"; \" \")\n",
-      "=SPLIT(\"0,9869220 0,1592600\"; \" \")\n"
+      "=SPLIT(\"0,9869220 0,1592600\"; \" \")\n",
+      "=SPLIT(\"1,0169764 0,0711761\"; \" \")\n",
+      "=SPLIT(\"1,1410489 0,0553038\"; \" \")\n",
+      "=SPLIT(\"1,1267690 0,1482544\"; \" \")\n",
+      "=SPLIT(\"1,2381586 0,0761411\"; \" \")\n",
+      "=SPLIT(\"1,1084288 0,1045321\"; \" \")\n",
+      "=SPLIT(\"1,2805604 0,0665522\"; \" \")\n",
+      "=SPLIT(\"1,3228729 0,1535725\"; \" \")\n",
+      "=SPLIT(\"1,2691375 0,0831854\"; \" \")\n"
      ]
     }
    ],
