--- a/USA Caso2.ipynb
+++ b/USA Caso2.ipynb
@@ -32,7 +32,15 @@
      "output_type": "stream",
      "text": [
       "=SPLIT(\"0,6400703 0,0307160\"; \" \")\n",
-      "=SPLIT(\"0,6559917 0,0357169\"; \" \")\n"
+      "=SPLIT(\"0,6559917 0,0357169\"; \" \")\n",
+      "=SPLIT(\"0,7844506 0,0491580\"; \" \")\n",
+      "=SPLIT(\"0,7738482 0,0518859\"; \" \")\n",
+      "=SPLIT(\"0,7545322 0,0824645\"; \" \")\n",
+      "=SPLIT(\"0,7906542 0,0489738\"; \" \")\n",
+      "=SPLIT(\"0,8600055 0,0711894\"; \" \")\n",
+      "=SPLIT(\"0,8715014 0,0545600\"; \" \")\n",
+      "=SPLIT(\"0,8509769 0,0494700\"; \" \")\n",
+      "=SPLIT(\"0,8586075 0,0433291\"; \" \")\n"
      ]
     }
    ],
