--- a/USA Caso3.ipynb
+++ b/USA Caso3.ipynb
@@ -31,7 +31,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=SPLIT(\"0,4479740 0,0904473\"; \" \")\n"
+      "=SPLIT(\"0,4479740 0,0904473\"; \" \")\n",
+      "=SPLIT(\"0,6192199 0,0430333\"; \" \")\n",
+      "=SPLIT(\"0,6469247 0,0550314\"; \" \")\n",
+      "=SPLIT(\"0,6807297 0,0247735\"; \" \")\n",
+      "=SPLIT(\"0,6073850 0,0506003\"; \" \")\n",
+      "=SPLIT(\"0,7285634 0,0475293\"; \" \")\n",
+      "=SPLIT(\"0,6487632 0,0370196\"; \" \")\n",
+      "=SPLIT(\"0,6946672 0,0302024\"; \" \")\n",
+      "=SPLIT(\"0,7220460 0,0583695\"; \" \")\n",
+      "=SPLIT(\"0,6968435 0,0350122\"; \" \")\n"
      ]
     }
    ],
