--- a/USA Caso4.ipynb
+++ b/USA Caso4.ipynb
@@ -31,7 +31,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=SPLIT(\"0,4526390 0,0646872\"; \" \")\n"
+      "=SPLIT(\"0,4526390 0,0646872\"; \" \")\n",
+      "=SPLIT(\"0,4720170 0,0752757\"; \" \")\n",
+      "=SPLIT(\"0,5316916 0,0402279\"; \" \")\n",
+      "=SPLIT(\"0,5951770 0,0083467\"; \" \")\n",
+      "=SPLIT(\"0,5841803 0,0244564\"; \" \")\n",
+      "=SPLIT(\"0,5935944 0,0459723\"; \" \")\n",
+      "=SPLIT(\"0,6195285 0,0256599\"; \" \")\n",
+      "=SPLIT(\"0,6199841 0,0515747\"; \" \")\n",
+      "=SPLIT(\"0,6228752 0,0342490\"; \" \")\n",
+      "=SPLIT(\"0,6685256 0,0282351\"; \" \")\n"
      ]
     }
    ],
