--- a/Vienna Caso1.ipynb
+++ b/Vienna Caso1.ipynb
@@ -35,7 +35,12 @@
       "=SPLIT(\"0,6009409 0,0603018\"; \" \")\n",
       "=SPLIT(\"0,6645637 0,0482256\"; \" \")\n",
       "=SPLIT(\"0,7535232 0,0719368\"; \" \")\n",
-      "=SPLIT(\"0,7838541 0,0797671\"; \" \")\n"
+      "=SPLIT(\"0,7838541 0,0797671\"; \" \")\n",
+      "=SPLIT(\"0,7628891 0,0910188\"; \" \")\n",
+      "=SPLIT(\"0,7535772 0,0564597\"; \" \")\n",
+      "=SPLIT(\"0,8261193 0,0579684\"; \" \")\n",
+      "=SPLIT(\"0,7827490 0,0629656\"; \" \")\n",
+      "=SPLIT(\"0,7899883 0,0577900\"; \" \")\n"
      ]
     }
    ],
