--- a/Vienna Caso2.ipynb
+++ b/Vienna Caso2.ipynb
@@ -34,7 +34,13 @@
       "=SPLIT(\"0,3766829 0,0719162\"; \" \")\n",
       "=SPLIT(\"0,4477046 0,0488002\"; \" \")\n",
       "=SPLIT(\"0,4440385 0,0326006\"; \" \")\n",
-      "=SPLIT(\"0,4722753 0,0469775\"; \" \")\n"
+      "=SPLIT(\"0,4722753 0,0469775\"; \" \")\n",
+      "=SPLIT(\"0,4580148 0,0242405\"; \" \")\n",
+      "=SPLIT(\"0,5224636 0,0465250\"; \" \")\n",
+      "=SPLIT(\"0,4999714 0,0476039\"; \" \")\n",
+      "=SPLIT(\"0,4805191 0,0473643\"; \" \")\n",
+      "=SPLIT(\"0,5181300 0,0375899\"; \" \")\n",
+      "=SPLIT(\"0,5161572 0,0452451\"; \" \")\n"
      ]
     }
    ],
