--- a/Vienna Caso3.ipynb
+++ b/Vienna Caso3.ipynb
@@ -33,7 +33,14 @@
      "text": [
       "=SPLIT(\"0,3226967 0,0390324\"; \" \")\n",
       "=SPLIT(\"0,3760636 0,0158195\"; \" \")\n",
-      "=SPLIT(\"0,3794980 0,0288255\"; \" \")\n"
+      "=SPLIT(\"0,3794980 0,0288255\"; \" \")\n",
+      "=SPLIT(\"0,4214200 0,0248429\"; \" \")\n",
+      "=SPLIT(\"0,4142864 0,0156296\"; \" \")\n",
+      "=SPLIT(\"0,4195982 0,0179534\"; \" \")\n",
+      "=SPLIT(\"0,4111550 0,0229640\"; \" \")\n",
+      "=SPLIT(\"0,4638676 0,0194877\"; \" \")\n",
+      "=SPLIT(\"0,4288837 0,0301997\"; \" \")\n",
+      "=SPLIT(\"0,4670439 0,0171401\"; \" \")\n"
      ]
     }
    ],
