--- a/Vienna Caso4.ipynb
+++ b/Vienna Caso4.ipynb
@@ -33,7 +33,14 @@
      "text": [
       "=SPLIT(\"0,3051287 0,0410735\"; \" \")\n",
       "=SPLIT(\"0,3457562 0,0631776\"; \" \")\n",
-      "=SPLIT(\"0,3673660 0,0452318\"; \" \")\n"
+      "=SPLIT(\"0,3673660 0,0452318\"; \" \")\n",
+      "=SPLIT(\"0,3507986 0,0396645\"; \" \")\n",
+      "=SPLIT(\"0,3809964 0,0221017\"; \" \")\n",
+      "=SPLIT(\"0,3722077 0,0129029\"; \" \")\n",
+      "=SPLIT(\"0,3994755 0,0278407\"; \" \")\n",
+      "=SPLIT(\"0,3983408 0,0132431\"; \" \")\n",
+      "=SPLIT(\"0,3985190 0,0086172\"; \" \")\n",
+      "=SPLIT(\"0,4087572 0,0129273\"; \" \")\n"
      ]
     }
    ],
