--- a/Vienna Caso3.ipynb
+++ b/Vienna Caso3.ipynb
@@ -51,6 +51,11 @@
     "controlador = Controller(rede)\n",
     "rede.draw()\n",
     "\n",
+    "# Algumas propriedades da rede\n",
+    "rede.nqubits = 300\n",
+    "rede.neprs = 3\n",
+    "rede.fidelity = 0.95\n",
+    "\n",
     "# Propriedades da simulação\n",
     "apps = [\"BB84\", \"E91\", \"B92\"]\n",
     "routes_calculation_type = 'kshortest'\n",
