--- a/China Caso4.ipynb
+++ b/China Caso4.ipynb
@@ -49,12 +49,12 @@
     "rede = Network()\n",
     "rede.set_topology(\"China\")\n",
     "controlador = Controller(rede)\n",
-    "rede.draw()\n",
     "\n",
     "# Algumas propriedades da rede\n",
     "rede.nqubits = 300\n",
     "rede.neprs = 3\n",
-    "rede.fidelity = 0.95\n",
+    "rede.set_fidelity(0.95)\n",
+    "rede.draw()\n",
     "\n",
     "# Propriedades da simulação\n",
     "apps = [\"BB84\", \"E91\", \"B92\"]\n",
