Update testes USA
Adicionada nova forma de atualização das propriedades na rede nos notebooks de teste.

--- a/USA Caso2.ipynb
+++ b/USA Caso2.ipynb
@@ -54,7 +54,8 @@
     "# Algumas propriedades da rede\n",
     "rede.nqubits = 300\n",
     "rede.neprs = 3\n",
-    "rede.fidelity = 0.95\n",
+    "rede.set_fidelity(0.95)\n",
+    "rede.draw()\n",
     "\n",
     "# Propriedades da simulação\n",
     "apps = [\"BB84\", \"E91\", \"B92\"]\n",
